# nc-assignment

./: .gitignore  .prettierignore  ARCHITECTURE-LSP.md  LSP-CODE-EXAMPLES.md  README.md  components.json  next.config.js  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
api/: completions.py  config.py  index.py
app/: globals.css  layout.tsx  page.tsx
app/api/: index.ts  sdk.gen.ts  types.gen.ts
app/api/@tanstack/: react-query.gen.ts
app/components/: ConfigForm.tsx  YamlEditor.tsx
app/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  tooltip.tsx
app/hooks/: useConfig.ts
app/providers/: QueryProvider.tsx
app/types/: config.ts
