[project]
name = "yaml-config-editor"
version = "0.1.0"
description = "Backend API for YAML Config Editor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pyyaml>=6.0.2",
]

[tool.uv]
dev-dependencies = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

